--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "private": false,
   "dependencies": {
     "@babel/cli": "^7.0.0",
+    "@polkadot/api": "^3.1.1",
+    "bitcoin-core": "^3.0.0",
+    "blockcypher": "^0.3.0",
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
@@ -25,12 +28,15 @@
     "exponential-backoff": "^3.0.1",
     "express": "^4.16.4",
     "express-openapi-validator": "^3.16.1",
+    "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "rosetta-node-sdk-client": "git+https://github.com/SmartArray/rosetta-node-sdk-client.git#1.4.1",
     "superagent": "3.7.0",
     "swagger-ui-express": "^4.0.2",
+    "web3": "^1.3.1",
+    "websocket": "^1.0.33",
     "winston": "^3.2.1"
   },
   "devDependencies": {
