--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bitcoin-core": "^3.0.0",
     "blockcypher": "^0.3.0",
     "body-parser": "^1.19.0",
+    "bree": "^4.0.0",
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "express-openapi-validator": "^3.16.1",
     "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
+    "lodash": "^4.17.20",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "rosetta-node-sdk-client": "git+https://github.com/SmartArray/rosetta-node-sdk-client.git#1.4.1",
@@ -40,7 +42,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
