--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "bitcoin-core": "^3.0.0",
     "blockcypher": "^0.3.0",
     "body-parser": "^1.19.0",
-    "bree": "^4.0.0",
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -32,6 +31,7 @@
     "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
     "lodash": "^4.17.20",
+    "node-schedule": "^1.3.2",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "rosetta-node-sdk-client": "git+https://github.com/SmartArray/rosetta-node-sdk-client.git#1.4.1",
@@ -40,8 +40,8 @@
     "superagent": "3.7.0",
     "swagger-ui-express": "^4.0.2",
     "web3": "^1.3.1",
-    "websocket": "^1.0.33",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "ws": "^7.4.1"
   },
   "devDependencies": {
     "axios": "^0.19.2",
