--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "swagger-ui-express": "^4.0.2",
     "web3": "^1.3.1",
     "winston": "^3.2.1",
-    "ws": "^7.4.1"
+    "ws": "^7.4.1",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
-    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
