--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@polkadot/api": "^3.1.1",
+    "axios": "^0.19.2",
+    "bignumber.js": "^9.0.1",
     "bitcoin-core": "^3.0.0",
     "blockcypher": "^0.3.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
@@ -31,6 +34,7 @@
     "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
     "lodash": "^4.17.20",
+    "lzutf8": "^0.5.6",
     "node-schedule": "^1.3.2",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
@@ -41,8 +45,7 @@
     "swagger-ui-express": "^4.0.2",
     "web3": "^1.3.1",
     "winston": "^3.2.1",
-    "ws": "^7.4.1",
-    "axios": "^0.19.2"
+    "ws": "^7.4.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
