--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-yaml": "^3.3.0",
     "lodash": "^4.17.20",
     "lzutf8": "^0.5.6",
+    "mysql2": "^2.2.5",
     "node-schedule": "^1.3.2",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
